--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
