--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "dotenv": "^11.0.0",
     "next": "latest",
+    "nodemailer": "^6.7.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
